feat: add footer section and style for it

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
 
           <!-- секция 2 -->
 
+          <section class="section" id="contacts">
+
+            <div class="section-contact-left"> 
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti suscipit libero earum ipsam ex tempora.
+            </div> 
+
+            <div class="section-contact-right">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe delectus quia modi animi quisquam in!
+            </div>
+
+            
+          </section>
+
           
 
         </div>
@@ -61,7 +75,22 @@
 
     </main>
     <footer class="footer">
-      <div class="container"> текст в футере  </div>
+
+        <div class="gh-block">
+            <a href="https://github.com/4yd1K" target="_blank">
+                <img id="ghlogo" src="https://seeklogo.com/images/G/github-logo-5F384D0265-seeklogo.com.png" alt="GitHub logo">
+            </a>
+        </div>
+
+        <p id="yeargr">2021</p>
+
+        <div class="rss-block">
+            <a href="https://rs.school/js/" target="_blank">
+                <img id="rsslogo" src="https://rs.school/images/rs_school_js.svg" alt="RSS logo">
+            </a>
+        </div>
+
+
     </footer>
   </body>
 </html>
