feat: add courses, languages, upd header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>cv</title>
+    <title>4yd1K's CV</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="assets/favicon.ico" />
 
@@ -18,18 +18,27 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">headepp</div>
+      <div class="container"> </div>
 
       <nav class="nav">
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="#contacts" class="nav-link">Contacts</a>
+            <a href="#cont" class="nav-link">Contacts</a>
           </li>
           <li class="nav-item">
             <a href="#summary" class="nav-link">Summary</a>
           </li>
           <li class="nav-item">
             <a href="#skills" class="nav-link">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a href="#code" class="nav-link">Code</a>
+          </li>
+          <li class="nav-item">
+            <a href="#courses" class="nav-link">Courses</a>
+          </li>
+          <li class="nav-item">
+            <a href="#languages" class="nav-link">Languages</a>
           </li>
         </ul>
       </nav>
@@ -53,7 +62,7 @@
 
           <section class="section" id="contacts">
             <div class="section-contact-left">
-              <h2 class="cont">CONTACT INFORMATION</h2>
+              <h2 id="cont" class="cont">CONTACT INFORMATION</h2>
               <div class="ulcont">
                 <ul>
                   <li>Phone: +375(44)510-50-32</li>
@@ -70,7 +79,7 @@
             </div>
 
             <div class="section-contact-right">
-              <h2 class="summary">summary</h2>
+              <h2 id="summary" class="summary">summary</h2>
               <div class="summury-text">
                 Having started my career as a logistic menager with minimum
                 skills, I learned how to forward cargo. At the same time, I
@@ -92,7 +101,7 @@
 
           <section class="section" id="contacts">
             <div class="section-contact-left">
-              <h2 class="skills">skills</h2>
+              <h2 id="skills" class="skills">skills</h2>
               <div class="ulcont">
                 <ul>
                   <li>skills in cargo transportation</li>
@@ -106,7 +115,7 @@
             </div>
 
             <div class="section-contact-right">
-              <h2 class="code">code</h2>
+              <h2 id="code" class="code">code</h2>
               <div class="code-text">
                 <code>
                   <div id="welcome"></div>
@@ -122,6 +131,36 @@
               </div>
             </div>
           </section>
+          <!-- секция 4 -->
+
+          <section class="section" id="contacts">
+            <div class="section-contact-left">
+              <h2 id="courses" class="courses">COURSES</h2>
+              <div class="courses-ul">
+                <ul>
+                  <li>Head first html and css(completed)</li>
+                  <li>Head first javascript(in progress)</li>
+                  <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                  
+                </ul>
+              </div>
+            </div>
+
+            <div class="section-contact-right">
+              <h2 id="languages" class="languages">languages</h2>
+              <div class="languages-text">
+                <ol>
+                  <li>Russian: Native</li>
+                  <li>English: A1</li>
+                </ol>
+                
+
+
+              </div>
+            </div>
+          </section>
+
+
         </div>
       </div>
     </main>
