refactor: fix errors after w3cvalidador

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+   
   </head>
   <body>
     <header class="header">
@@ -99,7 +99,7 @@
           </section>
           <!-- секция 3 -->
 
-          <section class="section" id="contacts">
+          <section class="section" >
             <div class="section-contact-left">
               <h2 id="skills" class="skills">skills</h2>
               <div class="ulcont">
@@ -118,8 +118,6 @@
               <h2 id="code" class="code">code</h2>
               <div class="code-text">
                 <code>
-                  <div id="welcome"></div>
-
                   const name = prompt('Пожалуйста, представьтесь?'); <br />
                   if (name) { <br />
                   <br />document.querySelector('#welcome').innerHTML =
@@ -133,7 +131,7 @@
           </section>
           <!-- секция 4 -->
 
-          <section class="section" id="contacts">
+          <section class="section" >
             <div class="section-contact-left">
               <h2 id="courses" class="courses">COURSES</h2>
               <div class="courses-ul">
@@ -165,7 +163,8 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="gh-block">
+      
+      <div class = "footer-container"> <div class="gh-block">
         <a href="https://github.com/4yd1K" target="_blank">
           <img
             id="ghlogo"
@@ -185,6 +184,7 @@
             alt="RSS logo"
           />
         </a>
+      </div>
       </div>
     </footer>
   </body>
