--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,13 +25,16 @@
 
   <script src="script.js"></script>
   <body>
-    <header class="header">
-      <div class="container">
+    <header class="header container">
+      
         <div class="background">
-          <nav class="nav">
+
+             <div class="logo"></div>
+             
+            <nav class="nav">
             <ul class="nav-list">
-              <li class="nav-link">skills</li>
-              <li class="nav-link">portfolio</li>
+              <li class="nav-link"><a href="#skills"> skills </a></li>
+              <li class="nav-link"><a href="#portfolio">portfolio </a></li>
               <li class="nav-link">video</li>
               <li class="nav-link">price</li>
               <li class="nav-link">contacts</li>
@@ -41,12 +44,12 @@
       </div>
     </header>
 
-    <main>
+    <main class="main container">
       <section class="section hero">
         <!-- <h1>ALexa Rise</h1> -->
         <div class="hero-content">
           <div class="hero-header">
-            <h1>Alexa</h1>
+            <h1>Alexa Rise</h1>
           </div>
           <div class="hero-text">
             <p>
@@ -59,16 +62,17 @@
           </div>
         </div>
       </section>
-      <section class="section"><h2 class="section-title">skills</h2></section>
-      <section class="section">
-        <h2 class="section-title">portfolio</h2>
+      <section class="section skills" id="skills"><h2 class="section-title">skills</h2></section>
+      <section class="section portfolio">
+        <h2 class="section-title" id="portfolio">portfolio</h2>
       </section>
-      <section class="section"><h2 class="section-title">video</h2></section>
-      <section class="section"><h2 class="section-title">price</h2></section>
-      <section class="section">
+      <section class="section video"><h2 class="section-title">video</h2></section>
+      <section class="section price"><h2 class="section-title">price</h2></section>
+      <section class="section contacts">
         <h2 class="section-title">contacts</h2>
       </section>
     </main>
+
     <footer>
       <div class="container"></div>
     </footer>
