--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,6 +62,9 @@
           </div>
         </div>
       </section>
+
+     <!-- skills -->
+
       <section class="section skills" id="skills"><h2 class="section-title"><div class="span">skills</div></h2>
       <div class ="skills-items" >
 
@@ -124,11 +127,16 @@
 
       </div>
       
-      
       </section>
+
+      <!-- портфоилио  -->
+
       <section class="section portfolio">
-        <h2 class="section-title" id="portfolio">portfolio</h2>
+        <h2 class="section-title" id="portfolio"><div class="span2">portfolio</div></h2>
       </section>
+
+
+
       <section class="section video"><h2 class="section-title" id="video">video</h2></section>
       <section class="section price"><h2 class="section-title"id="price">price</h2></section>
       <section class="section contacts">
