feat: add full portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -144,6 +144,18 @@
           
           </div>
 
+          <div class="portfolio-items">  
+            <img src="/rsschool-cv/portfolio/assets/img/portfolio-img-1.jpg" alt="pic1">
+            <img src="/rsschool-cv/portfolio/assets/img/portfolio-img-2.jpg" alt="pic2">
+            <img src="/rsschool-cv/portfolio/assets/img/portfolio-img-3.jpg" alt="pic3">
+            <img src="/rsschool-cv/portfolio/assets/img/portfolio-img-4.jpg" alt="pic4">
+            <img src="/rsschool-cv/portfolio/assets/img/portfolio-img-5.jpg" alt="pic5">
+            <img src="/rsschool-cv/portfolio/assets/img/portfolio-img-6.jpg" alt="pic6">
+
+
+
+          </div>
+
 
 
 
