feat: finish footer

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -308,7 +308,7 @@ a<!DOCTYPE html>
       </div>
 
       <div class="School"><p class="text-school">Rolling Scopes School</p></div>
-      <div class="Social"></div>
+      <div class="Social"><img src="/rsschool-cv/portfolio/assets/svg/social-list.svg" alt="social-list"></div>
     
       
 
