--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -281,7 +281,7 @@
 
 
 
-      <section class="section-contacts">
+      <section class="section-contacts" id = "contacts">
     
     
                <div class="contacts-conteiner">
