--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,6 +32,15 @@
 
     <header class="header container">
 
+      <div class="right-menu">
+        <ul>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#video">Video</a></li>
+          <li><a href="#price">Price</a></li>
+          <li><a href="#contacts">Contacts</a></li>
+        </ul>
+      </div>
 
       <div class="background">
         <a href="" class="logo"
@@ -59,15 +68,7 @@
           <div class="line line2"></div>
           <div class="line line3"></div>
         </div>
-        <div class="right-menu">
-          <ul>
-            <li><a href="">1</a></li>
-            <li><a href="">2</a></li>
-            <li><a href="">3</a></li>
-            <li><a href="">4</a></li>
-            <li><a href="">5</a></li>
-          </ul>
-        </div>
+
         <!-- новый код -->
 
         <!-- новый код -->
@@ -314,6 +315,7 @@
         </ul>
       </div>
     </footer>
+
     <!-- <script src="index.js"></script> -->
   </body>
 </html>
