--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,12 +33,12 @@
     <header class="header container">
 
       <div class="right-menu">
-        <ul>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#video">Video</a></li>
-          <li><a href="#price">Price</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+        <ul class="R-men">
+          <li><a class="R1" href="#skills">Skills</a></li>
+          <li><a class="R2" href="#portfolio">Portfolio</a></li>
+          <li><a class="R3" href="#video">Video</a></li>
+          <li><a class="R4" href="#price">Price</a></li>
+          <li><a class="R5" href="#contacts">Contacts</a></li>
         </ul>
       </div>
 
