feat: make to perfect pixel

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -164,7 +164,7 @@
       <!-- портфоилио  -->
 
       <section class="section portfolio">
-        <div class="section-title" id="portfolio">
+        <div class="section-title por" id="portfolio">
           <h2 class="span2">Portfolio</h2>
         </div>
 
@@ -188,7 +188,7 @@
       <!-- video -->
 
       <section class="section video">
-        <div class="section-title" id="video">
+        <div class="section-title vid" id="video">
           <h2 class="span3">Video</h2>
         </div>
 
@@ -224,7 +224,7 @@
       <!-- price -->
 
       <section class="section price">
-        <div class="section-title" id="price">
+        <div class="section-title PR" id="price">
           <h2 class="span4">Price</h2>
         </div>
 
