feat: skill description

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -108,7 +108,7 @@
               <img src="assets/svg/camera1.svg" alt="photo" />
             </div>
             <div class="skill-text">
-              <h3 class="skill-header">Digital photography</h3>
+              <h3 class="skill-header S1">Digital photography</h3>
               <p class="skill-description">
                 High-quality photos in the studio and on the nature
               </p>
@@ -122,7 +122,7 @@
             </div>
 
             <div class="skill-text">
-              <h3 class="skill-header">Video shooting</h3>
+              <h3 class="skill-header S2">Video shooting</h3>
               <p class="skill-description">
                 Capture your moments so that they always stay with you
               </p>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="skill-text">
-              <h3 class="skill-header">Retouch</h3>
+              <h3 class="skill-header S3">Retouch</h3>
               <p class="skill-description">
                 I strive to make photography surpass reality
               </p>
@@ -150,7 +150,7 @@
               </div>
 
               <div class="skill-text">
-                <h3 class="skill-header">Audio</h3>
+                <h3 class="skill-header S4">Audio</h3>
                 <p class="skill-description">
                   Professional sounds recording for video, advertising,
                   portfolio
