feat: end portfolio 2

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -292,7 +292,7 @@
       <div class="icons">
         <div><img src="./assets/svg/copy.svg" alt="copyright-regular" /></div>
         <div><img src="./assets/svg/2022.svg" alt="2022" /></div>
-        <div><img src="./assets/svg/github.svg" alt="github" /></div>
+        <div><a href="https://github.com/4yd1K"><img src="./assets/svg/github.svg" alt="github" /></a></div>
       </div>
 
       <div class="School">
