--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -176,12 +176,12 @@
         </div>
 
         <div class="portfolio-items">
-          <img src="./assets/img/portfolio-img-6.jpg" alt="pic1" />
-          <img src="./assets/img/portfolio-img-5.jpg" alt="pic2" />
-          <img src="./assets/img/portfolio-img-4.jpg" alt="pic3" />
-          <img src="./assets/img/portfolio-img-3.jpg" alt="pic4" />
-          <img src="./assets/img/portfolio-img-2.jpg" alt="pic5" />
-          <img src="./assets/img/portfolio-img-1.jpg" alt="pic6" />
+          <img src="./assets/img/portfolio-img-6.jpg" alt="pic1" class="portfolio-image"/>
+          <img src="./assets/img/portfolio-img-5.jpg" alt="pic2"class="portfolio-image" />
+          <img src="./assets/img/portfolio-img-4.jpg" alt="pic3" class="portfolio-image"/>
+          <img src="./assets/img/portfolio-img-3.jpg" alt="pic4"class="portfolio-image" />
+          <img src="./assets/img/portfolio-img-2.jpg" alt="pic5"class="portfolio-image"/>
+          <img src="./assets/img/portfolio-img-1.jpg" alt="pic6" class="portfolio-image"/>
         </div>
       </section>
 
