feat: add change all seasons img by click

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -169,10 +169,10 @@
         </div>
 
         <div class="portfolio-btns">
-          <button class="portfolio-btn" data-season="winter">Winter</button>
-          <button class="portfolio-btn" data-season="spring">Spring</button>        
-          <button class="portfolio-btn" data-season="summer">Summer</button>
-          <button class="portfolio-btn" data-season="autumn">Autumn</button>
+          <button class="portfolio-btn winter">Winter</button>
+          <button class="portfolio-btn spring">Spring</button>        
+          <button class="portfolio-btn summer">Summer</button>
+          <button class="portfolio-btn autumn">Autumn</button>
         </div>
 
         <div class="portfolio-items">
