feat: add change active status function

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,11 +57,11 @@
           </ul>
         </nav>
 
-        <div class="switch-lng">
+        <button class="switch-lng">
           <a href="#">en</a>
           <div>/</div>
           <a href="#">ru</a>
-        </div>
+        </button>
 
         <div class="hamburger">
           <div class="line line1"></div>
