feat: add data translate

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,11 +34,11 @@
 
       <div class="right-menu">
         <ul class="R-men">
-          <li><a class="R1" href="#skills">Skills</a></li>
-          <li><a class="R2" href="#portfolio">Portfolio</a></li>
-          <li><a class="R3" href="#video">Video</a></li>
-          <li><a class="R4" href="#price">Price</a></li>
-          <li><a class="R5" href="#contacts">Contacts</a></li>
+          <li><a class="R1" href="#skills"data-i18='skills'>Skills</a></li>
+          <li><a class="R2" href="#portfolio"data-i18='portfolio'>Portfolio</a></li>
+          <li><a class="R3" href="#video"data-i18='video'>Video</a></li>
+          <li><a class="R4" href="#price"data-i18='price'>Price</a></li>
+          <li><a class="R5" href="#contacts"data-i18='contacts'>Contacts</a></li>
         </ul>
       </div>
 
@@ -49,11 +49,11 @@
 
         <nav class="nav-list">
           <ul class="nav-list">
-            <li class="nav-link"><a href="#skills"> Skills </a></li>
-            <li class="nav-link"><a href="#portfolio">Portfolio </a></li>
-            <li class="nav-link"><a href="#video">Video</a></li>
-            <li class="nav-link"><a href="#price">Price</a></li>
-            <li class="nav-link"><a href="#contacts">Contacts</a></li>
+            <li class="nav-link"><a href="#skills"data-i18='skills'> Skills </a></li>
+            <li class="nav-link"><a href="#portfolio"data-i18='portfolio'>Portfolio </a></li>
+            <li class="nav-link"><a href="#video"data-i18='video'>Video</a></li>
+            <li class="nav-link"><a href="#price"data-i18='price'>Price</a></li>
+            <li class="nav-link"><a href="#contacts"data-i18='contacts'>Contacts</a></li>
           </ul>
         </nav>
 
@@ -82,15 +82,15 @@
 
         <div class="hero-content">
           <div class="hero-header">
-            <h1 class="h1">Alexa Rise</h1>
+            <h1 class="h1"data-i18='hero-title'>Alexa Rise</h1>
           </div>
-          <div class="hero-text">
-            <p>
+          <div class="hero-text" >
+            <p data-i18='hero-text'>
               Save sincere emotions, romantic feelings and happy moments of life
               together with professional photographer Alexa Rise
             </p>
           </div>
-          <button class="hero-button">Hire Me</button>
+          <button class="hero-button"data-i18='hire'>Hire Me</button>
         </div>
       </section>
 
@@ -98,7 +98,7 @@
 
       <section class="section skills" id="skills">
         <div class="section-title">
-          <h2 class="span">Skills</h2>
+          <h2 class="span" data-i18='skills'>Skills</h2>
         </div>
 
         <div class="skills-items">
@@ -108,8 +108,8 @@
               <img src="assets/svg/camera1.svg" alt="photo" />
             </div>
             <div class="skill-text">
-              <h3 class="skill-header S1">Digital photography</h3>
-              <p class="skill-description">
+              <h3 class="skill-header S1"data-i18='skill-title-1'>Digital photography</h3>
+              <p class="skill-description" data-i18='skill-text-1'>
                 High-quality photos in the studio and on the nature
               </p>
             </div>
@@ -122,8 +122,8 @@
             </div>
 
             <div class="skill-text">
-              <h3 class="skill-header S2">Video shooting</h3>
-              <p class="skill-description">
+              <h3 class="skill-header S2"data-i18='skill-title-2'>Video shooting</h3>
+              <p class="skill-description" data-i18='skill-text-2'>
                 Capture your moments so that they always stay with you
               </p>
             </div>
@@ -135,8 +135,8 @@
             </div>
 
             <div class="skill-text">
-              <h3 class="skill-header S3">Retouch</h3>
-              <p class="skill-description">
+              <h3 class="skill-header S3"data-i18='skill-title-3'>Retouch</h3>
+              <p class="skill-description" data-i18='skill-text-3'>
                 I strive to make photography surpass reality
               </p>
             </div>
@@ -150,8 +150,8 @@
               </div>
 
               <div class="skill-text">
-                <h3 class="skill-header S4">Audio</h3>
-                <p class="skill-description">
+                <h3 class="skill-header S4"data-i18='skill-title-4'>Audio</h3>
+                <p class="skill-description" data-i18='skill-text-4'>
                   Professional sounds recording for video, advertising,
                   portfolio
                 </p>
@@ -165,14 +165,14 @@
 
       <section class="section portfolio">
         <div class="section-title por" id="portfolio">
-          <h2 class="span2">Portfolio</h2>
+          <h2 class="span2"data-i18='portfolio'>Portfolio</h2>
         </div>
 
         <div class="portfolio-btns">
-          <button class="portfolio-btn winter">Winter</button>
-          <button class="portfolio-btn spring">Spring</button>        
-          <button class="portfolio-btn summer">Summer</button>
-          <button class="portfolio-btn autumn">Autumn</button>
+          <button class="portfolio-btn winter"data-i18='winter'>Winter</button>
+          <button class="portfolio-btn spring"data-i18='spring'>Spring</button>        
+          <button class="portfolio-btn summer"data-i18='summer'>Summer</button>
+          <button class="portfolio-btn autumn"data-i18='autumn'>Autumn</button>
         </div>
 
         <div class="portfolio-items">
@@ -189,7 +189,7 @@
 
       <section class="section video">
         <div class="section-title vid" id="video">
-          <h2 class="span3">Video</h2>
+          <h2 class="span3"data-i18='video'>Video</h2>
         </div>
 
         <div class="player">
@@ -226,7 +226,7 @@
 
       <section class="section price">
         <div class="section-title PR" id="price">
-          <h2 class="span4">Price</h2>
+          <h2 class="span4"data-i18='price'>Price</h2>
         </div>
 
         <div class="price-items">
@@ -235,14 +235,14 @@
             <div class="title-card">Standard</div>
             <div class="price-card">500 $</div>
             <div class="description">
-              <span class="num1">One location</span>
-              <span class="num2">120 photos in color</span>
-              <span class="num3">12 photos in retouch</span>
-              <span class="num4">Readiness 2-3 weeks</span>
-              <span class="num5">Make up, visage</span>
+              <span class="num1"data-i18='price-description-1-span-1'>One location</span>
+              <span class="num2"data-i18='price-description-1-span-2'>120 photos in color</span>
+              <span class="num3"data-i18='price-description-1-span-3'>12 photos in retouch</span>
+              <span class="num4"data-i18='price-description-1-span-4'>Readiness 2-3 weeks</span>
+              <span class="num5"data-i18='price-description-1-span-5'>Make up, visage</span>
             </div>
 
-            <button class="order">Order shooting</button>
+            <button class="order"data-i18='order'>Order shooting</button>
           </div>
 
           <!-- price card 2 -->
@@ -250,14 +250,14 @@
             <div class="title-card">Premium</div>
             <div class="price-card">700 $</div>
             <div class="description">
-              <span class="num1">One or two locations</span>
-              <span class="num2">200 photos in color</span>
-              <span class="num3">20 photos in retouch</span>
-              <span class="num4">Readiness 1-2 weeks</span>
-              <span class="num5">Make up, visage</span>
+              <span class="num1"data-i18='price-description-2-span-1'>One or two locations</span>
+              <span class="num2"data-i18='price-description-2-span-2'>200 photos in color</span>
+              <span class="num3"data-i18='price-description-2-span-3'>20 photos in retouch</span>
+              <span class="num4"data-i18='price-description-2-span-4'>Readiness 1-2 weeks</span>
+              <span class="num5"data-i18='price-description-2-span-5'>Make up, visage</span>
             </div>
 
-            <button class="order">Order shooting</button>
+            <button class="order"data-i18='order'>Order shooting</button>
           </div>
 
           <!-- price card 3 -->
@@ -265,25 +265,25 @@
             <div class="title-card">Gold</div>
             <div class="price-card">1000 $</div>
             <div class="description">
-              <span class="num1">Three locations or more</span>
-              <span class="num2">300 photos in color</span>
-              <span class="num3">50 photos in retouch</span>
-              <span class="num4">Readiness 1 week</span>
-              <span class="num5">Make up, visage, hairstyle</span>
+              <span class="num1"data-i18='price-description-3-span-1'>Three locations or more</span>
+              <span class="num2"data-i18='price-description-3-span-2'>300 photos in color</span>
+              <span class="num3"data-i18='price-description-3-span-3''>50 photos in retouch</span>
+              <span class="num4"data-i18='price-description-3-span-4'>Readiness 1 week</span>
+              <span class="num5"data-i18='price-description-3-span-5'>Make up, visage, hairstyle</span>
             </div>
 
-            <button class="order">Order shooting</button>
+            <button class="order"data-i18='order'>Order shooting</button>
           </div>
         </div>
       </section>
 
       <section class="section-contacts" id="contacts">
         <div class="contacts-conteiner">
-          <h2 class="title-contact">Contact me</h2>
+          <h2 class="title-contact"data-i18='contact-me'>Contact me</h2>
           <input type="email" id="mail" placeholder="E-mail" />
           <input type="tel" id="tel" placeholder="Phone" />
           <textarea placeholder="Message"> </textarea>
-          <button class="button-cont">Send message</button>
+          <button class="button-cont"data-i18='send-message'>Send message</button>
         </div>
       </section>
     </main>
