feat: oooh yyyess it's work  -  switch  lang

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,9 +58,9 @@
         </nav>
 
         <button class="switch-lng">
-          <a class="lang-val" href="#">en</a>
+          <a class="lang en" href="#">en</a>
           <div>/</div>
-          <a class="lang-val" href="#">ru</a>
+          <a class="lang ru" href="#">ru</a>
         </button>
 
         <div class="hamburger">
