feat: add some light theme

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,7 +44,7 @@
 
       <div class="background">
         <a href="" class="logo"
-          ><img src="./assets/img/logo.png" alt="logo"
+          ><img  src="./assets/img/logo.png" alt="logo"
         /></a>
 
         <nav class="nav-list">
@@ -57,11 +57,11 @@
           </ul>
         </nav>
 
-        <button class="switch-lng">
+        <div class="switch-lng">
           <a class="lang en" href="#">en</a>
           <div>/</div>
           <a class="lang ru" href="#">ru</a>
-        </button>
+        </div>
 
         <div class="hamburger">
           <div class="line line1"></div>
