--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -56,11 +56,20 @@
             <li class="nav-link"><a href="#contacts" data-i18='contacts'>Contacts</a></li>
           </ul>
         </nav>
+          
+
+   
+     
 
         <div class="switch-lng">
           <a class="lang en" href="#">en</a>
           <div>/</div>
           <a class="lang ru" href="#">ru</a>
+        </div>
+
+        <div>
+          <button class="sun" href=""><img src="/portfolio/assets/svg/sun.svg" alt='sunl' /> 
+          </button> 
         </div>
 
         <div class="hamburger">
