feat: add few of light theme

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div>
-          <button class="sun" href=""><img src="/portfolio/assets/svg/sun.svg" alt='sunl' /> 
+          <button class="sun" href=""><img src="./assets/svg/sun.svg" alt='sunl' /> 
           </button> 
         </div>
 
@@ -106,7 +106,7 @@
       <!-- skills -->
 
       <section class="section skills" id="skills">
-        <div class="section-title">
+        <div class="section-title-skills">
           <h2 class="span"  data-i18='skills'>Skills</h2>
         </div>
 
@@ -173,7 +173,7 @@
       <!-- портфоилио  -->
 
       <section class="section portfolio">
-        <div class="section-title por" id="portfolio">
+        <div class="section-title-por por" id="portfolio">
           <h2 class="span2" data-i18='portfolio'>Portfolio</h2>
         </div>
 
@@ -197,7 +197,7 @@
       <!-- video -->
 
       <section class="section video">
-        <div class="section-title vid" id="video">
+        <div class="section-title-vid vid" id="video">
           <h2 class="span3" data-i18='video'>Video</h2>
         </div>
 
@@ -234,7 +234,7 @@
       <!-- price -->
 
       <section class="section price">
-        <div class="section-title PR" id="price">
+        <div class="section-title-pr PR" id="price">
           <h2 class="span4" data-i18='price'>Price</h2>
         </div>
 
