feat: add few of light theme

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -240,8 +240,8 @@
 
         <div class="price-items">
           <!-- price card 1 -->
-          <div class="price-item">
-            <div class="title-card">Standard</div>
+          <div class="price-item card1">
+            <div class="title-card title-card1">Standard</div>
             <div class="price-card">500 $</div>
             <div class="description">
               <span class="num1" data-i18='price-description-1-span-1'>One location</span>
@@ -255,8 +255,8 @@
           </div>
 
           <!-- price card 2 -->
-          <div class="price-item">
-            <div class="title-card">Premium</div>
+          <div class="price-item card2">
+            <div class="title-card title-card2">Premium</div>
             <div class="price-card">700 $</div>
             <div class="description">
               <span class="num1" data-i18='price-description-2-span-1'>One or two locations</span>
@@ -270,8 +270,8 @@
           </div>
 
           <!-- price card 3 -->
-          <div class="price-item">
-            <div class="title-card">Gold</div>
+          <div class="price-item card3">
+            <div class="title-card title-card3">Gold</div>
             <div class="price-card">1000 $</div>
             <div class="description">
               <span class="num1" data-i18='price-description-3-span-1'>Three locations or more</span>
