feat: add fuction to store language in lockalStorage

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,13 +62,13 @@
      
 
         <div class="switch-lng">
-          <a class="lang en" href="#">en</a>
+          <a class="lang en">en</a>
           <div>/</div>
-          <a class="lang ru" href="#">ru</a>
+          <a class="lang ru">ru</a>
         </div>
 
         <div>
-          <button class="sun" href=""><img src="./assets/svg/sun.svg" alt='sunl' /> 
+          <button class="sun"><img src="./assets/svg/sun.svg" alt='sunl' /> 
           </button> 
         </div>
 
