--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div>
-          <button class="sun"><img src="./assets/svg/sun.svg" alt='sunl' /> 
+          <button class="sun"><img class="sun-img" src="./assets/svg/sun.svg" alt='sunl' /> 
           </button> 
         </div>
 
