feat: add progress bar with width

--- a/player/index.html
+++ b/player/index.html
@@ -26,7 +26,14 @@
 
           <div class = 'song-artist'>Beyonce</div>
           <div class = 'song-title'>Don't Hurt Yourself</div>
-          <input type="range" class = 'progress-bar' min = '0' max = '233.717551' value = '0'>
+          <div class = 'progress_container'>
+
+            <div class="progress"></div>
+          </div>
+
+         
+          <!-- <input type="range" class = 'progress-bar' min = '0' max = '233.717551' value = '0' onchange="updateProgress ()"> 
+          <div class = 'currentTime'> </div> -->
 
 
          
