feat: add new progress bar and progress time

--- a/player/index.html
+++ b/player/index.html
@@ -27,9 +27,12 @@
           <div class = 'song-artist'>Beyonce</div>
           <div class = 'song-title'>Don't Hurt Yourself</div>
           <div class = 'progress_container'>
+              <input type = "range" class = "progress"  >
 
-            <div class="progress"></div>
+            
           </div>
+          <div class= "controls__time">00:00</div>
+
 
          
           <!-- <input type="range" class = 'progress-bar' min = '0' max = '233.717551' value = '0' onchange="updateProgress ()"> 
