--- a/player/index.html
+++ b/player/index.html
@@ -32,6 +32,7 @@
             
           </div>
           <div class= "controls__time">00:00</div>
+          <div class= "song-time"></div>
 
 
          
