--- a/API images/index.html
+++ b/API images/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>RandomCat</title>
+  <title>RandomJoke</title>
 </head>
 <body>
   <div class="container">
-    <h2>Cats API</h2>
+    <h2>Chuck API</h2>
     <!-- <div class="card">
       <img src="img/cat-default.jpg" alt="Cat" class="img">
     </div> -->
@@ -17,9 +17,9 @@
       </div>
     <div class="quote">
         <p class="qoute-text">qfqf</p>
-        <p class="quote-author">dddd</p>
+        <p class="quote-author">Chuck Norris</p>
     </div>
-    <button class="btn" type="button">Random Cat</button>
+    <button class="btn" type="button">Random Joke</button>
   </div>
   <script src="index.js"></script>
 </body>
