--- a/API images/index.html
+++ b/API images/index.html
@@ -9,6 +9,11 @@
 <body>
   <div class="container">
     <h2>Chuck API</h2>
+    <div class="switch-lang">
+        <a class="lang ru active-lang">ru</a>
+        <div>/</div>
+        <a class="lang be">be</a>
+      </div>
     <!-- <div class="card">
       <img src="img/cat-default.jpg" alt="Cat" class="img">
     </div> -->
@@ -16,7 +21,7 @@
         <img src="img/chuck.png" alt="Cat" class="img">
       </div>
     <div class="quote">
-        <p class="qoute-text">qfqf</p>
+        <p class="qoute-text"></p>
         <p class="quote-author">Chuck Norris</p>
     </div>
     <button class="btn" type="button">Random Joke</button>
