feat: finish Chack Noris random quote

--- a/API images/index.html
+++ b/API images/index.html
@@ -24,7 +24,7 @@
         <p class="qoute-text"></p>
         <p class="quote-author">Chuck Norris</p>
     </div>
-    <button class="btn" type="button">Random Joke</button>
+    <button class="btn" type="button">Random quote</button>
   </div>
   <script src="index.js"></script>
 </body>
